@@ -64,6 +64,8 @@ dependencies {
     compile 'com.github.anrwatchdog:anrwatchdog:1.3.0'
     //slider preferences
     compile 'com.pavelsikun:material-seekbar-preference:2.3.0'
+    //Openstreetmap api lib
+    compile 'org.osmdroid:osmdroid-android:5.5:release@aar'
     // Test libraries
     testCompile 'junit:junit:4.12'
 }
